# sso

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  TODO  book.toml  docker-compose.yml  mkdocs.yml  package-lock.json  package.json
ark_auth/: .env  Cargo.toml  Dockerfile  README.md
ark_auth/src/: cli.rs  client.rs  core.rs  email.rs  lib.rs  main.rs  models.rs  result.rs  schema.rs  smtp.rs
ark_auth/src/api/: key.rs  mod.rs  service.rs  user.rs
ark_auth/src/client/: actor.rs  async_impl.rs  auth.rs  error.rs  executor.rs  key.rs  mod.rs  service.rs  sync_impl.rs  user.rs
ark_auth/src/core/: audit.rs  auth.rs  csrf.rs  jwt.rs  key.rs  metrics.rs  mod.rs  service.rs  user.rs  util.rs
ark_auth/src/db/: auth.rs  key.rs  mod.rs  user.rs
ark_auth/src/driver/: mod.rs
ark_auth/src/drivers/: mod.rs
ark_auth/src/notify/: email.rs  mod.rs  smtp.rs
ark_auth/src/server/: api.rs  error.rs  key.rs  metrics.rs  middleware.rs  mod.rs  server_api.rs  server_middleware.rs  service.rs  smtp.rs  user.rs  validate.rs
ark_auth/src/test/: mod.rs
ark_auth/tests/: integration.rs  postgres.rs  sqlite.rs  support.rs  v1_auth_key_test.rs  v1_auth_oauth_test.rs  v1_auth_reset_test.rs  v1_auth_test.rs  v1_auth_token_test.rs  v1_key_test.rs  v1_service_test.rs  v1_user_test.rs
ark_auth/tests/support/: audit.rs  auth_key.rs  auth_local.rs  auth_token.rs  guide.rs  key.rs  mod.rs  service.rs  user.rs
ark_auth_manual/: Cargo.toml  book.toml  build.rs
ark_auth_manual/src/: SUMMARY.md  developer.md  introduction.md  lib.rs
ark_auth_manual/src/api/: ping.md  ping.md.skt.md
ark_auth_manual/src/guides/: api-key.md  api-key.md.skt.md  deployment.md  integration.md  login.md  login.md.skt.md  reset-password.md  reset-password.md.skt.md
ark_auth_test/: Cargo.toml
ark_auth_test/src/: lib.rs  support.rs  test_auth.rs  test_auth_key.rs  test_auth_reset.rs  test_auth_token.rs  test_key.rs  test_service.rs  test_user.rs
ark_auth_test/tests/: postgres.rs
ark_kv/: Cargo.toml  README.md
ark_kv/src/: cli.rs  lib.rs  main.rs
ark_kv/src/core/: data.rs  disk.rs  disk_encryption.rs  fuse.rs  key.rs  mod.rs  version.rs
ark_kv/src/driver/: mod.rs
ark_kv/tests/: integration.rs
ark_kv/tests/support/: mod.rs
ark_ota/: Cargo.toml  README.md
ark_ota/src/: lib.rs  main.rs
ark_ota/src/core/: mod.rs
mz_ota/: Cargo.toml  README.md
mz_ota/src/: cli.rs  lib.rs
ota/: Cargo.toml  README.md
ota/data/: Cargo.toml  README.md
ota/data/src/: cli.rs  lib.rs  main.rs
ota/src/: main.rs
ota/src/core/: mod.rs
sso/: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  client.rs  common.rs  config.rs  error.rs  internal.rs  lib.rs  util.rs  validate.rs
sso/cli/: audit_read.rs  audit_retention.rs  backup.rs  generate_client.rs  generate_example.rs  generate_password.rs  generate_secret.rs  generate_user.rs  mod.rs  postgres_setup.rs  postgres_teardown.rs
sso/http_client/: mod.rs
sso/http_server/: api.rs  client.rs  error.rs  internal.rs  mod.rs
sso/http_server/route_audit/: create.rs  read.rs
sso/http_server/route_auth/: delete.rs  email_update.rs  logout.rs  password_reset.rs  password_update.rs  register.rs
sso/http_server/route_client/: read.rs
sso/http_server/route_client_access/: read.rs  update.rs
sso/http_server/route_csrf/: create.rs  verify.rs
sso/http_server/route_oauth2/: authorize.rs  introspect.rs  redirect.rs  token.rs
sso/http_server/route_script/: mod.rs
sso/http_server/route_user/: create.rs  delete.rs  read.rs  update.rs
sso/http_server/route_user_access/: delete.rs  read.rs
sso/http_server/route_user_api_key/: create.rs  delete.rs  mod.rs  read.rs  update.rs  verify.rs
sso/http_server/route_well_known/: change_password.rs  mod.rs  openid_configuration.rs
sso/http_server/template/: auth.hbs  error.hbs  logout.hbs  mod.rs
sso/mailto/: mod.rs
sso/metrics/: mod.rs
sso/migrations/2019-04-09-134546_init/: down.sql  up.sql
sso/oauth2/: mod.rs  scope.rs
sso/openapi/: mod.rs  structs.rs  traits.rs
sso/openid/: mod.rs
sso/postgres/: access_delete.sql  access_read.sql  access_read_many.sql  api_key_delete.sql  api_key_insert.sql  api_key_read.sql  api_key_update.sql  api_key_verify.sql  audit_insert.sql  audit_read.sql  code_insert_auth.sql  code_insert_delete.sql  code_insert_password_reset.sql  code_insert_register.sql  code_read_client.sql  code_verify.sql  csrf_insert.sql  csrf_verify.sql  mod.rs  oauth2_code_insert_auth.sql  oauth2_code_insert_register.sql  oauth2_code_read_client.sql  oauth2_code_verify.sql  setup.sql  teardown.sql  token_insert.sql  token_introspect.sql  token_refresh.sql  user_access_read.sql  user_access_update.sql  user_delete.sql  user_email_update.sql  user_insert.sql  user_oauth2_provider_check.sql  user_oauth2_provider_insert.sql  user_password_reset_accept.sql  user_password_update.sql  user_password_update2.sql  user_update.sql  user_upsert_email.sql
sso/postgres/access/: upsert.sql
sso/postgres/audit/: metrics.sql  read_id.sql  retention.sql
sso/postgres/user/: delete_static.sql  password_check.sql  password_upsert.sql  read.sql  upsert_static.sql
sso/proto/: sso.proto  sso_service.proto
sso/proto/gateway/: annotations.proto
sso/proto/openapi/: annotations.proto  openapiv2.proto
sso/server/: api.rs  internal.rs  mod.rs
sso/server/route_audit/: create.rs  read.rs
sso/server/route_auth/: delete.rs  email_update.rs  logout.rs  mod.rs  password_reset.rs  password_update.rs  register.rs
sso/server/route_client/: read.rs
sso/server/route_client_access/: delete.rs  (+2 more)
sso/src/: cli.rs  client.rs  csrf.rs  env.rs  grpc.rs  header.rs  http_server.rs  jwt.rs  lib.rs  main.rs  prelude.rs  result.rs  validate.rs
sso/tests/: integration.rs
sso_grpc/: Cargo.toml  Dockerfile  build.rs
sso_grpc/proto/: sso.proto
sso_grpc/src/: client.rs  lib.rs  server.rs
sso_grpc/tests/: integration.rs
sso_openapi/: Cargo.toml  Dockerfile  go.mod  go.sum  main.go  sso.pb.go  sso.pb.gw.go  sso.swagger.json
sso_openapi/src/: error.rs  lib.rs  main.rs
(+1002 files in other folders)
