[package]
name = "ark_auth"
version = "0.2.0"
description = "Authentication server"
authors = ["Sam Ward <mail@mojzu.net>"]
license = "Unlicense"
readme = "README.md"
homepage = "https://mojzu.net/ark_auth/"
repository = "https://github.com/mojzu/ark_auth"
edition = "2018"

[features]
default = ["postgres"]
postgres = []
sqlite = []

[dependencies]
actix = "*"
actix-identity = "*"
actix-http = "*"
actix-rt = "*"
actix-service = "*"
actix-web = { version = "^1.0.3", features = ["ssl", "client"] }
bcrypt = "*"
clap = "*"
chrono = { version = "*", features = ["serde"] }
diesel = { version = "*", features = ["postgres", "sqlite", "r2d2", "chrono", "serde_json"] }
diesel_migrations = { version = "*", features = ["postgres", "sqlite"] }
env_logger = "*"
failure = "*"
futures = "*"
http = "*"
jsonwebtoken = "*"
lettre = "*"
lettre_email = "*"
log = { version = "*", features = ["max_level_trace", "release_max_level_info"] }
native-tls = "*"
r2d2 = "*"
reqwest = "*"
oauth2 = "^3.0.0-alpha.3"
sentry = "*"
sentry-actix = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
serde_urlencoded = "*"
sha-1 = "*"
url = "*"
uuid = { version = "*", features = ["v4"] }
time = "*"
validator = "*"
validator_derive = "*"
zxcvbn = { git = "https://github.com/mojzu/zxcvbn-rs.git" }
