[package]
name = "ark_auth"
version = "0.3.0"
description = "Authentication server"
authors = ["Sam Ward <mail@mojzu.net>"]
license = "Unlicense"
readme = "README.md"
homepage = "https://mojzu.net/ark_auth/"
repository = "https://github.com/mojzu/ark_auth"
edition = "2018"

[features]
default = ["postgres", "async_client", "sync_client"]
postgres = []
sqlite = []
async_client = []
sync_client = []

[dependencies]
actix = "*"
actix-identity = "*"
actix-http = "*"
actix-rt = "*"
actix-service = "*"
# Feature `ssl` required for client HTTPS support.
actix-web = { version = "^1.0.5", features = ["ssl", "rust-tls", "client"] }
awc = "*"
bcrypt = "*"
clap = "*"
chrono = { version = "*", features = ["serde"] }
derive_builder = "*"
diesel = { version = "*", features = ["postgres", "sqlite", "r2d2", "chrono", "serde_json"] }
diesel_migrations = { version = "*", features = ["postgres", "sqlite"] }
env_logger = "*"
failure = "*"
futures = "*"
handlebars = "*"
http = "*"
jsonwebtoken = "*"
lettre = "*"
lettre_email = "*"
log = { version = "*", features = ["max_level_trace", "release_max_level_info"] }
native-tls = "*"
prometheus = "*"
r2d2 = "*"
reqwest = { version = "*", features = ["rustls-tls"] }
rustls = "*"
oauth2 = "^3.0.0-alpha.3"
sentry = "*"
sentry-actix = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
serde_urlencoded = "*"
sha-1 = "*"
url = "^1.7.2"
uuid = { version = "*", features = ["v4"] }
time = "*"
validator = "*"
validator_derive = "*"
zxcvbn = { git = "https://github.com/mojzu/zxcvbn-rs.git" }
