[package]
name = "ark_auth_manual"
version = "0.1.0"
authors = ["Sam Ward <mail@mojzu.net>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
skeptic = "*"

[dependencies]
ark_auth = { path = "../ark_auth" }
reqwest = "*"
serde_json = "*"
skeptic = "*"
uuid = { version = "*", features = ["v4"] }
