[package]
name = "ark_auth_test"
version = "0.1.0"
authors = ["Sam Ward <mail@mojzu.net>"]
edition = "2018"

[dependencies]
actix-http = "*"
actix-http-test = "*"
actix-web = { version = "1.0.0-beta.5", features = ["rust-tls", "client"] }
ark_auth = { path = "../ark_auth" }
chrono = { version = "*", features = ["serde"] }
serde = "*"
serde_derive = "*"
serde_json = "*"
uuid = { version = "*", features = ["v4"] }
