[package]
name = "ota"
version = "0.1.0"
description = "Over-the-air updates"
authors = ["Sam Ward <git@mojzu.net>"]
license = "Unlicense"
readme = "README.md"
homepage = "https://mojzu.net/sso/"
repository = "https://github.com/mojzu/sso"
edition = "2018"

[dependencies]
clap = "*"
env_logger = "*"
failure = "*"
log = { version = "*", features = ["max_level_trace", "release_max_level_info"] }
sentry = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
sodiumoxide = "*"
