[package]
name = "sso"
version = "0.10.0"
description = "Single sign-on authentication server."
authors = ["Sam Ward <git@mojzu.net>"]
license = "Unlicense"
readme = "README.md"
homepage = "https://mojzu.net/sso/"
documentation = "https://docs.rs/crate/sso/"
repository = "https://github.com/mojzu/sso"
categories = ["authentication", "web-programming", "command-line-utilities"]
edition = "2018"

[lib]
name = "sso"
path = "src/lib.rs"

[[bin]]
name = "sso-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "sso-grpc"
path = "src/bin/grpc.rs"

[features]
default = ["postgres"]
postgres = []

[dependencies]
bytes = "0.4.12"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"
clap = "2.33"
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono", "serde_json", "uuidv07"] }
diesel_migrations = { version = "1.4", features = ["postgres"] }
env_logger = "0.7"
failure = "0.1"
futures-util = "0.3"
handlebars = "3.0"
http = "0.2"
http-body = "0.3"
hyper = "0.13"
jsonwebtoken = "7.1"
lazy_static = "1.4"
lettre = "0.9"
lettre_email = "0.9"
libreauth = "0.13"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
native-tls = "0.2"
oauth2 = "=3.0.0-alpha.9"
prometheus = { version = "0.8", features = ["default", "process"] }
prost = "0.6"
prost-derive = "0.6"
prost-types = "0.6"
r2d2 = "0.8"
reqwest = { version = "0.10", features = ["json", "rustls-tls"] }
rustls = "0.17"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.6"
sha-1 = "0.8"
tonic = { version = "0.1", features = ["tls"] }
tower-service = "0.3"
unic-langid = "0.8"
url = "2.1"
uuid = { version = "0.7.4", features = ["v4", "serde"] }
validator = "0.10"
zxcvbn = "2.0"

[dependencies.sentry]
version = "0.18"
default-features = false
features = ["with_panic", "with_failure", "with_device_info", "with_rust_info", "with_env_logger"]

[dependencies.tokio]
version = "0.2.13"
default-features = false
features = ["rt-threaded", "time", "macros", "stream", "signal", "blocking"]

[build-dependencies]
tonic-build = "0.1"
