[package]
name = "sso"
version = "0.10.2"
description = "Single sign-on authentication server."
authors = [ "Sam Ward <git@mojzu.net>" ]
license = "Unlicense"
readme = "README.md"
homepage = "https://mojzu.net/sso/"
documentation = "https://docs.rs/crate/sso/"
repository = "https://github.com/mojzu/sso"
categories = [ "authentication", "web-programming", "command-line-utilities" ]
edition = "2018"

[lib]
name = "sso"
path = "src/lib.rs"

[[bin]]
name = "sso-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "sso-grpc"
path = "src/bin/grpc.rs"

[features]
default = [ "postgres" ]
postgres = [ ]

[dependencies]
bytes = "0.5.5"
chrono = { version = "0.4.13", features = [ "serde" ] }
chrono-tz = "0.5.2"
clap = "2.33"
diesel = { version = "1.4.5", features = [ "postgres", "r2d2", "chrono", "serde_json", "uuidv07", "uuid" ] }
diesel_migrations = { version = "1.4.0", features = [ "postgres" ] }
env_logger = "0.7.1"
failure = "0.1.8"
futures-util = "0.3.5"
handlebars = "3.2"
http = "0.2.1"
http-body = "0.3.1"
hyper = "0.13.6"
jsonwebtoken = "7.2"
lazy_static = "1.4"
lettre = "0.9.3"
lettre_email = "0.9.4"
libreauth = "0.13.0"
log = { version = "0.4.8", features = [ "max_level_trace", "release_max_level_info" ] }
native-tls = "0.2.4"
oauth2 = "3.0"
prometheus = { version = "0.9.0", features = [ "default", "process" ] }
prost = "0.6.1"
prost-derive = "0.6.1"
prost-types = "0.6.1"
r2d2 = "0.8.9"
reqwest = { version = "0.10.6", features = [ "json", "rustls-tls" ] }
rustls = "0.18.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.6.1"
sha-1 = "0.9.1"
tonic = { version = "0.2.2", features = [ "tls" ] }
tower-service = "0.3.0"
unic-langid = "0.9.0"
url = "2.1"
uuid = { version = "=0.7.4", features = [ "v4", "serde" ] }
validator = "0.10.1"
zxcvbn = "2.0"

[dependencies.sentry]
version = "0.19.0"
features = [ "log", "reqwest" ]
[dependencies.sentry-log]
version = "0.19.0"
features = [ "env_logger" ]

[dependencies.tokio]
version = "0.2.21"
default-features = false
features = [ "rt-threaded", "time", "macros", "stream", "signal", "blocking" ]

[build-dependencies]
tonic-build = "0.2.2"
