[package]
name = "sso"
version = "0.16.0"
description = "Single sign-on authentication server."
authors = [ "Sam Ward <git@mojzu.net>" ]
license = "Unlicense"
readme = "README.md"
homepage = "https://mojzu.net/sso/"
documentation = "https://docs.rs/crate/sso/"
repository = "https://github.com/mojzu/sso"
categories = [ "authentication", "web-programming", "command-line-utilities" ]
edition = "2018"

[lib]
name = "sso"
path = "src/lib.rs"

[[bin]]
name = "sso-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "sso-grpc"
path = "src/bin/grpc.rs"

[features]
default = [ "postgres" ]
postgres = [ ]

[dependencies]
bytes = "1.0.1"
chrono = { version = "0.4.13", features = [ "serde" ] }
chrono-tz = "0.5.2"
clap = "2.33"
diesel = { version = "1.4.6", features = [ "postgres", "r2d2", "chrono", "serde_json", "uuidv07", "uuid" ] }
diesel_migrations = { version = "1.4.0", features = [ "postgres" ] }
env_logger = "0.8.2"
failure = "0.1.8"
futures-util = "0.3.5"
handlebars = "3.2"
http = "0.2.1"
http-body = "0.4.0"
hyper = "0.14.5"
jsonwebtoken = "7.2"
lazy_static = "1.4"
lettre = "0.9.3"
lettre_email = "0.9.4"
libreauth = "0.13.0"
log = { version = "0.4.8", features = [ "max_level_trace", "release_max_level_info" ] }
native-tls = "0.2.4"
oauth2 = "3.0"
prometheus = { version = "0.12.0", features = [ "default", "process" ] }
prost = "0.7.0"
prost-derive = "0.7.0"
prost-types = "0.7.0"
r2d2 = "0.8.9"
reqwest = { version = "0.11.3", features = [ "json", "rustls-tls", "multipart" ] }
rustls = "0.19.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7.0"
sha-1 = "0.9.1"
tonic = { version = "0.4.2", features = [ "tls" ] }
tower-service = "0.3.0"
unic-langid = "0.9.0"
url = "2.1"
uuid = { version = "=0.7.4", features = [ "v4", "serde" ] }
validator = "0.13.0"
zxcvbn = "2.0"

[dependencies.sentry]
version = "0.22.0"
features = [ "log", "reqwest" ]
[dependencies.sentry-log]
version = "0.22.0"

[dependencies.tokio]
version = "1.5.0"
default-features = false
features = [ "full" ]

[build-dependencies]
tonic-build = "0.4.2"
