[package]
name = "sso_grpc"
version = "0.1.0"
description = "Single sign-on authentication gRPC server."
authors = ["Sam Ward <git@mojzu.net>"]
license = "Unlicense"
edition = "2018"

[lib]
name = "sso_grpc"
path = "src/lib.rs"

[[bin]]
name = "sso-grpc-server"
path = "src/bin/server.rs"

[dependencies]
bytes = "0.4.12"
http = "0.1.21"
http-body = "=0.2.0-alpha.3"
prost = "0.5.0"
prost-derive = "0.5.0"
sso = { path = "../sso" }
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
tonic = { git = "https://github.com/hyperium/tonic.git" }
tower = { git = "https://github.com/tower-rs/tower" }

[build-dependencies]
tonic-build = { git = "https://github.com/hyperium/tonic.git" }
