[package]
name = "sso_openapi"
version = "0.1.0"
authors = ["Sam Ward <git@mojzu.net>"]
edition = "2018"

[dependencies]
chrono = "0.4.10"
futures-util = "0.3.1"
futures-preview = "= 0.3.0-alpha.19"
hyper = "0.13.0"
http = "0.2.0"
http-body = "0.3.0"
mime = "0.3.14"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.44"
serde_urlencoded = "0.6.1"
tokio = { version = "0.2.4", features = ["rt-threaded"] }
tokio-executor = { version = "= 0.2.0-alpha.6", features = ["threadpool"] }
tower-service = "0.3.0"
